<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="heading">My Nanodegree Apps!</string>
    <string name="app_1">Spotify Streamer</string>
    <string name="app_2">Scores App</string>
    <string name="app_3">Library App</string>
    <string name="app_4">Build It Bigger</string>
    <string name="app_5">XYZ Reader</string>
    <string name="app_6">CAPSTONE : My Own App</string>
</resources>
