<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <TextView android:text="@string/heading" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginBottom="25sp"
        android:textColor="@android:color/white"
        />
    <Button
        style="@style/Button_Primary"
        android:text="@string/app_1"
        android:onClick="createToast"/>
    <Button
        style="@style/Button_Primary"
        android:text="@string/app_2"
        android:onClick="createToast"/>
    <Button
        style="@style/Button_Primary"
        android:text="@string/app_3"
        android:onClick="createToast"/>
    <Button
        style="@style/Button_Primary"
        android:text="@string/app_4"
        android:onClick="createToast"/>
    <Button
        style="@style/Button_Primary"
        android:text="@string/app_5"
        android:onClick="createToast"/>
    <Button
        style="@style/Button_Primary"
        android:text="@string/app_6"
        android:onClick="createToast"/>
</LinearLayout>
